[workspace]
default-members = ["pulldown-cmark", "pulldown-cmark-escape"]
members = [
  "bench",
  "dos-fuzzer",
  "fuzz",
  "pulldown-cmark",
  "pulldown-cmark-escape",
]
resolver = "2"

[profile.release]
debug = true
strip = true
lto = true
codegen-units = 1
overflow-checks = true
panic = "abort"
